--- a/resources/assets/scss/app.scss
+++ b/resources/assets/scss/app.scss
@@ -21,6 +21,7 @@
 /* Components */
 @import './components/logo';
 @import './components/timeline';
+@import './components/cmp-collection-list';
 @import './components/cmp-header-bookmarklet';
 
 /* Pages */
