--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -33346,6 +33346,108 @@ p > span > .icon.ni {
   border-radius: 5px;
 }
 
+.cmp-collection-list-item {
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 1.25rem;
+  border: 1px solid #dbdfea;
+  border-radius: 4px;
+}
+
+.cmp-collection-list-item:not(:last-child) {
+  margin-bottom: 1rem;
+}
+
+.cmp-collection-list-btn {
+  padding-left: 2.75rem;
+}
+
+.cmp-collection-list-desc {
+  display: flex;
+  flex-grow: 1;
+}
+
+.cmp-collection-list-info {
+  margin-top: 0.35rem;
+}
+
+.cmp-collection-list-title {
+  font-size: 1rem;
+  line-height: 1.2;
+}
+
+.cmp-collection-list-name {
+  color: #526484;
+}
+
+.cmp-collection-list-img {
+  flex-shrink: 0;
+  margin-right: 1rem;
+}
+
+.cmp-collection-list-img img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  width: 1.75rem;
+  height: 1.75rem;
+  border-radius: 4px;
+}
+
+.cmp-collection-list-meta .meta-item {
+  display: block;
+  line-height: 1.2;
+  padding: 0.25rem 0;
+}
+
+.cmp-collection-list-title .badge {
+  margin-left: 1rem;
+}
+
+@media (min-width: 768px) {
+  .cmp-collection-list-img {
+    margin-right: 1.5rem;
+  }
+
+  .cmp-collection-list-img img {
+    width: 3.5rem;
+    height: 3.5rem;
+  }
+
+  .cmp-collection-list-desc {
+    align-items: center;
+  }
+
+  .cmp-collection-list-item {
+    padding: 1rem 1.5rem;
+  }
+
+  .cmp-collection-list-meta .meta-item {
+    display: inline-block;
+    padding-right: 1.5rem;
+  }
+}
+
+@media (max-width: 459px) {
+  .cmp-collection-list-desc {
+    width: 100%;
+    padding-left: 2.75rem;
+  }
+
+  .cmp-collection-list-img {
+    position: absolute;
+    margin-left: -2.75rem;
+  }
+
+  .cmp-collection-list-btn {
+    margin: 1rem 0 0.5rem;
+  }
+}
+
 .cmp-header-bookmarklet {
   width: 100%;
   height: 42px;
